Solution for animation bug on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -114,20 +114,42 @@
 .debugFooter a:active{
   background:#444;
 }
+.debugButton{
+  display:block;
+  border-radius:50%;
+  position:absolute;
+  top:15px;right:15px;
+  width:70px;height:65px;
+  background:#ddd;
+  text-decoration:none;
+  text-align:center;
+  font-size:45px;
+  padding-top:5px;
+  color:#111;
+}
 /********************************************/
 /****************ANIMATIONS******************/
 .debugFade{
-  animation: fadeOut 2s;
-  animation-delay: 10s;
-  animation-fill-mode: forwards;
+  animation:fadeOut 2s;
+  animation-delay:10s;
+  animation-fill-mode:forwards;
+}
+.debugOff{
+  animation:off 2s;
+  animation-delay:10s;
+  animation-fill-mode:forwards;
 }
 /********************************************/
 /*****************KEYFRAMES******************/
 @keyframes fadeOut {
-  from {opacity: 1;}
-  to {opacity: 0;}
+  from {opacity: 1; }
+  to {opacity: 0; }
 }
 @keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
+  from {opacity: 0; }
+  to {opacity: 1; }
+}
+@keyframes off {
+  from {right: 15px; }
+  to {right: -100px; }
 }
